checkString, determineGrade,  sumUpToLimit, ReturnHelloWorld,repeatString solutions

--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -129,7 +129,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the input is "Empty", "Null", or "Contains Text".
      */
     public static String checkString(String a) {
-        return null; // Replace null with the variable you used to store the result
+        String isEmpty = 'Empty';
+        String isNull = 'Null';
+        String containsText = 'Contains Text';
+
+        if(a == null){
+            return isNull; 
+        }else if(a.length() == 0){
+            return isEmpty;
+        }else{
+            return containsText;
+        }
     }
 
     /**
@@ -145,7 +155,24 @@ public with sharing class FlowControlLoopsCollections {
      * @return The grade for the given score.
      */
     public static String determineGrade(Integer score) {
-        return null; // Replace null with the variable you used to store the result
+        
+        String gradeA = 'A';
+        String gradeB = 'B';
+        String gradeC = 'C';
+        String gradeD = 'D';
+        String gradeF = 'F';
+    
+        if(score > 90){
+            return gradeA;
+        }else if(score > 80 && score < 90){
+            return gradeB;
+        }else if(score > 70 && score < 80){
+            return gradeC;
+        }else if(score > 60 && score < 70){
+            return gradeD;
+        }else{
+            return gradeF;
+        }
     }
 
 
@@ -157,13 +184,13 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of all integers up to the limit.
      */
     public static Integer sumUpToLimit(Integer intLimit) {
-        /* 
-         for (){
-            
-         }
-        */
+        
+        Integer totalAddition = 0;
 
-        return null; // Replace null with the variable you used to store the result
+        for(Integer i =0; i <= intLimit ; i++){
+            totalAddition += i;
+        }
+        return totalAddition; 
     }
 
     /**
@@ -173,16 +200,14 @@ public with sharing class FlowControlLoopsCollections {
      * @return The string "Hello World!; Hello World!; Hello World!; "
      */
     public static String returnHelloWorld() {
-        // Initialize the result String
-
-        // Use a for loop to append 'Hello World!;' to the result string three times
-        /* 
-         for (){
-            
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        String helloWorld = '';
+        String text = 'Hello World!';
+        Integer numberOfApparition = 3;
+        
+        for(Integer i = 1; i <= numberOfApparition ; i++){
+            helloWorld += text + ';'+' ';
+        }
+        return helloWorld;
     }
 
     /**
@@ -196,18 +221,16 @@ public with sharing class FlowControlLoopsCollections {
      * @return The new string with the inputString repeated repeatCount times.
      */
     public static String repeatString(String inputString, Integer repeatCount) {
-        // Initialize the result String
+        String result ='';
 
-        // Use a for loop to append the inputString to the result string repeatCount times
-        /*
-        for () {
-
-            // If it is not the last iteration, add a semicolon to separate the strings
-        }
-        */
-
-        // Return the final result string
-        return null; // Replace null with the variable you used to store the result
+        for(Integer i = 1; i <= repeatCount; i++){
+            if(i == repeatCount){
+                result += inputString;
+            }else{
+                result += inputString+';'+' ';
+            }
+        } return result;
+ 
     }
 
     /**
